@@ -1,0 +1,5 @@
+var config = {};
+
+config.hostname = process.env.API_HOSTNAME || 'http://localhost:3000';
+
+module.exports = config;
