@@ -1,21 +1,0 @@
-import { connect } from 'react-redux'
-import { toggleTodo } from '../actions'
-import TodoList from '../components/TodoList'
-
-
-const mapStateToProps = (state) => ({
-  //todos: getVisibleTodos(state.todos, state.visibilityFilter)
-  todos: state.todos
-
-})
-
-const mapDispatchToProps = {
-  onTodoClick: toggleTodo
-}
-
-const VisibleTodoList = connect(
-  mapStateToProps,
-  mapDispatchToProps
-)(TodoList)
-
-export default VisibleTodoList
