@@ -12,7 +12,7 @@ class IsScrollOwnerOrReadOnly(permissions.BasePermission):
         if request.method in permissions.SAFE_METHODS:
             return True
 
-        
+
         # Write permissions are only allowed to the owner of the snippet.
         return obj.author == request.user
 
